Dependency loading with extensions working. Need to refactor to combine implementations of Dependency and Extension loading.