@@ -7,6 +7,7 @@ version = "1.0-SNAPSHOT"
 
 
 dependencies {
+//    minecraft("")
 //    implementation("net.yakclient:bmu-api:1.0-SNAPSHOT")
 //    implementation("net.yakclient:bmu-mixin:1.0-SNAPSHOT")
     implementation("org.jetbrains.kotlinx:kotlinx-cli:0.3.4")
@@ -18,7 +19,6 @@ dependencies {
     implementation("com.typesafe:config:1.4.1")
     implementation(project(":util"))
 
-    testImplementation("org.jetbrains.kotlin:kotlin-test:1.6.0")
 }
 
 application {
@@ -32,7 +32,3 @@ tasks.run {
     this.run
 }
 
-tasks.test {
-    useJUnitPlatform()
-    jvmArgs = listOf("--add-reads","kotlin.stdlib=kotlinx.coroutines.core.jvm")
-}
